--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,12 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0;
+  margin: 5%;
   padding: 0;
 }
 
 .logo {
-  height: 20%;
+  height: 10%;
   width: 20%;
   align-self: center;
   padding: 0%;
