--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,3 +1,11 @@
+.nasa-logo {
+  height: 10%;
+  width: 20%;
+  align-self: center;
+  padding: 0%;
+  background-color: transparent;
+}
+
 .search-bar-container {
   margin: 2%;
   text-align: center;
@@ -11,7 +19,7 @@
   margin: 0;
 }
 
-input[type="text"] {
+.search-input {
   font-size: 18px;
   padding: 10px;
   border-radius: 4px 0 0 4px;
