--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,14 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5%;
-  padding: 0;
+  padding: 2%;
+  background-color: #f4f4f4;
+  box-sizing: border-box;
 }
 
 .logo {
-  height: 10%;
-  width: 20%;
+  max-height: 80px;
+  max-width: 200px;
   align-self: center;
-  padding: 0%;
+  padding: 2% 0;
   background-color: transparent;
 }
