--- a/src/styles/searchResults.css
+++ b/src/styles/searchResults.css
@@ -1,22 +1,16 @@
-.image-gallery {
+.masonry-grid {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: center;
-  padding: 1rem;
+  margin-left: -30px;
+  width: auto;
+}
+
+.masonry-grid_column {
+  padding-left: 30px;
+  background-clip: padding-box;
 }
 
 .image {
   width: 100%;
-  max-width: 300px;
-  height: auto;
+  margin-bottom: 30px;
   object-fit: cover;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-  border-radius: 4px;
-}
-
-.image:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
