--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,15 +3,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2%;
+  margin: 5%;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
   background-color: #f4f4f4;
-  box-sizing: border-box;
 }
 
 .logo {
-  max-height: 80px;
-  max-width: 200px;
+  height: 10%;
+  width: 20%;
   align-self: center;
-  padding: 2% 0;
+  padding: 0%;
   background-color: transparent;
+  margin-bottom: 2rem;
 }
