--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -40,3 +40,25 @@
 .search-button:hover {
   background-color: #3e8e41;
 }
+
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 2rem;
+}
+
+.tag {
+  padding: 6px 12px;
+  background-color: #c40010;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.2s;
+}
+
+.tag:hover {
+  background-color: #3e8e41;
+}
