--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,6 +1,6 @@
 .nasa-logo {
   height: 10%;
-  width: 20%;
+  max-width: 20%;
   align-self: center;
   padding: 0%;
   background-color: transparent;
@@ -47,6 +47,7 @@
   justify-content: center;
   gap: 10px;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .tag {
